[gd_scene load_steps=9 format=2]

[ext_resource path="res://gameplay.gd" type="Script" id=1]
[ext_resource path="res://sheet.png" type="Texture" id=2]
[ext_resource path="res://time.gd" type="Script" id=3]
[ext_resource path="res://pipe.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]

resource_name = "clear"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("endround:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("endround:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("endround/clear:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("endround/clear:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 24, 56, 0 ), Rect2( 0, 24, 56, 16 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("endround/clear:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 36 ), Vector2( 4, 20 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "do_reset"
} ]
}

[sub_resource type="Animation" id=3]

resource_name = "fade_in"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fader:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 0 ), Vector2( 64, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fader:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fade_func"
} ]
}

[sub_resource type="Animation" id=4]

resource_name = "fade_out"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fader:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fader:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 80 ), Vector2( 64, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=2]

resource_name = "ohno"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("endround:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("endround:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("endround/clear:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("endround/clear:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 40, 56, 56, 0 ), Rect2( 40, 56, 56, 16 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("endround/clear:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 36 ), Vector2( 4, 20 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "do_reset"
} ]
}

[node name="gameplay" type="ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="time label" type="Sprite" parent="." index="0"]

position = Vector2( 20, 0 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 24, 56, 16, 8 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="time" type="Control" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Hint", "Rect" ]
time = 120

[node name="tm" type="Timer" parent="time" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="start" type="Sprite" parent="." index="2"]

editor/display_folded = true
position = Vector2( 4, 0 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -4, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="fill" type="Sprite" parent="start" index="0"]

visible = false
texture = ExtResource( 2 )
centered = false
offset = Vector2( -4, 0 )
region_enabled = true
region_rect = Rect2( 0, 8, 8, 8 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="end" type="Sprite" parent="." index="3"]

editor/display_folded = true
position = Vector2( 64, 60 )
rotation = 1.5708
texture = ExtResource( 2 )
centered = false
offset = Vector2( -4, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="fill" type="Sprite" parent="end" index="0"]

visible = false
texture = ExtResource( 2 )
centered = false
offset = Vector2( -4, 0 )
region_enabled = true
region_rect = Rect2( 0, 8, 8, 8 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="pipes" type="Position2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 0, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="pipe8" parent="pipes" index="0" instance=ExtResource( 4 )]

[node name="pipe21" parent="pipes" index="1" instance=ExtResource( 4 )]

position = Vector2( 0, 8 )

[node name="pipe29" parent="pipes" index="2" instance=ExtResource( 4 )]

position = Vector2( 0, 16 )

[node name="pipe37" parent="pipes" index="3" instance=ExtResource( 4 )]

position = Vector2( 0, 24 )

[node name="pipe45" parent="pipes" index="4" instance=ExtResource( 4 )]

position = Vector2( 0, 32 )

[node name="pipe53" parent="pipes" index="5" instance=ExtResource( 4 )]

position = Vector2( 0, 40 )

[node name="pipe61" parent="pipes" index="6" instance=ExtResource( 4 )]

position = Vector2( 0, 48 )

[node name="pipe9" parent="pipes" index="7" instance=ExtResource( 4 )]

position = Vector2( 8, 0 )

[node name="pipe20" parent="pipes" index="8" instance=ExtResource( 4 )]

position = Vector2( 8, 8 )

[node name="pipe28" parent="pipes" index="9" instance=ExtResource( 4 )]

position = Vector2( 8, 16 )

[node name="pipe36" parent="pipes" index="10" instance=ExtResource( 4 )]

position = Vector2( 8, 24 )

[node name="pipe44" parent="pipes" index="11" instance=ExtResource( 4 )]

position = Vector2( 8, 32 )

[node name="pipe52" parent="pipes" index="12" instance=ExtResource( 4 )]

position = Vector2( 8, 40 )

[node name="pipe60" parent="pipes" index="13" instance=ExtResource( 4 )]

position = Vector2( 8, 48 )

[node name="pipe10" parent="pipes" index="14" instance=ExtResource( 4 )]

position = Vector2( 16, 0 )

[node name="pipe17" parent="pipes" index="15" instance=ExtResource( 4 )]

position = Vector2( 16, 8 )

[node name="pipe25" parent="pipes" index="16" instance=ExtResource( 4 )]

position = Vector2( 16, 16 )

[node name="pipe33" parent="pipes" index="17" instance=ExtResource( 4 )]

position = Vector2( 16, 24 )

[node name="pipe41" parent="pipes" index="18" instance=ExtResource( 4 )]

position = Vector2( 16, 32 )

[node name="pipe49" parent="pipes" index="19" instance=ExtResource( 4 )]

position = Vector2( 16, 40 )

[node name="pipe57" parent="pipes" index="20" instance=ExtResource( 4 )]

position = Vector2( 16, 48 )

[node name="pipe11" parent="pipes" index="21" instance=ExtResource( 4 )]

position = Vector2( 24, 0 )

[node name="pipe16" parent="pipes" index="22" instance=ExtResource( 4 )]

position = Vector2( 24, 8 )

[node name="pipe24" parent="pipes" index="23" instance=ExtResource( 4 )]

position = Vector2( 24, 16 )

[node name="pipe32" parent="pipes" index="24" instance=ExtResource( 4 )]

position = Vector2( 24, 24 )

[node name="pipe40" parent="pipes" index="25" instance=ExtResource( 4 )]

position = Vector2( 24, 32 )

[node name="pipe48" parent="pipes" index="26" instance=ExtResource( 4 )]

position = Vector2( 24, 40 )

[node name="pipe56" parent="pipes" index="27" instance=ExtResource( 4 )]

position = Vector2( 24, 48 )

[node name="pipe12" parent="pipes" index="28" instance=ExtResource( 4 )]

position = Vector2( 32, 0 )

[node name="pipe19" parent="pipes" index="29" instance=ExtResource( 4 )]

position = Vector2( 32, 8 )

[node name="pipe27" parent="pipes" index="30" instance=ExtResource( 4 )]

position = Vector2( 32, 16 )

[node name="pipe35" parent="pipes" index="31" instance=ExtResource( 4 )]

position = Vector2( 32, 24 )

[node name="pipe43" parent="pipes" index="32" instance=ExtResource( 4 )]

position = Vector2( 32, 32 )

[node name="pipe51" parent="pipes" index="33" instance=ExtResource( 4 )]

position = Vector2( 32, 40 )

[node name="pipe59" parent="pipes" index="34" instance=ExtResource( 4 )]

position = Vector2( 32, 48 )

[node name="pipe13" parent="pipes" index="35" instance=ExtResource( 4 )]

position = Vector2( 40, 0 )

[node name="pipe18" parent="pipes" index="36" instance=ExtResource( 4 )]

position = Vector2( 40, 8 )

[node name="pipe26" parent="pipes" index="37" instance=ExtResource( 4 )]

position = Vector2( 40, 16 )

[node name="pipe34" parent="pipes" index="38" instance=ExtResource( 4 )]

position = Vector2( 40, 24 )

[node name="pipe42" parent="pipes" index="39" instance=ExtResource( 4 )]

position = Vector2( 40, 32 )

[node name="pipe50" parent="pipes" index="40" instance=ExtResource( 4 )]

position = Vector2( 40, 40 )

[node name="pipe58" parent="pipes" index="41" instance=ExtResource( 4 )]

position = Vector2( 40, 48 )

[node name="pipe14" parent="pipes" index="42" instance=ExtResource( 4 )]

position = Vector2( 48, 0 )

[node name="pipe22" parent="pipes" index="43" instance=ExtResource( 4 )]

position = Vector2( 48, 8 )

[node name="pipe30" parent="pipes" index="44" instance=ExtResource( 4 )]

position = Vector2( 48, 16 )

[node name="pipe38" parent="pipes" index="45" instance=ExtResource( 4 )]

position = Vector2( 48, 24 )

[node name="pipe46" parent="pipes" index="46" instance=ExtResource( 4 )]

position = Vector2( 48, 32 )

[node name="pipe54" parent="pipes" index="47" instance=ExtResource( 4 )]

position = Vector2( 48, 40 )

[node name="pipe62" parent="pipes" index="48" instance=ExtResource( 4 )]

position = Vector2( 48, 48 )

[node name="pipe15" parent="pipes" index="49" instance=ExtResource( 4 )]

position = Vector2( 56, 0 )

[node name="pipe23" parent="pipes" index="50" instance=ExtResource( 4 )]

position = Vector2( 56, 8 )

[node name="pipe31" parent="pipes" index="51" instance=ExtResource( 4 )]

position = Vector2( 56, 16 )

[node name="pipe39" parent="pipes" index="52" instance=ExtResource( 4 )]

position = Vector2( 56, 24 )

[node name="pipe47" parent="pipes" index="53" instance=ExtResource( 4 )]

position = Vector2( 56, 32 )

[node name="pipe55" parent="pipes" index="54" instance=ExtResource( 4 )]

position = Vector2( 56, 40 )

[node name="cursor" type="Sprite" parent="." index="5"]

position = Vector2( 0, 8 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 56, 32, 8, 8 )
_sections_unfolded = [ "Material", "Offset", "Region", "Visibility" ]

[node name="endround" type="ColorRect" parent="." index="6"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 22.0
margin_right = 64.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="ohno" type="Sprite" parent="endround" index="0"]

visible = false
position = Vector2( 5, 5 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 40, 56, 56, 16 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="clear" type="Sprite" parent="endround" index="1"]

position = Vector2( 4, 20 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -16 )
region_enabled = true
region_rect = Rect2( 40, 56, 56, 16 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="fader" type="ColorRect" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Rect" ]

[node name="tm_blink" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.4
one_shot = false
autostart = false

[node name="tm_fill" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = false

[node name="anim" type="AnimationPlayer" parent="." index="10"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/clear = SubResource( 1 )
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )
anims/ohno = SubResource( 2 )
blend_times = [  ]

[connection signal="timeout" from="time/tm" to="time" method="_on_tm_timeout"]

[connection signal="timeout" from="tm_blink" to="." method="_on_tm_blink_timeout"]

[connection signal="timeout" from="tm_fill" to="." method="_on_tm_fill_timeout"]


